--- a/HRM_Project/nbproject/project.properties
+++ b/HRM_Project/nbproject/project.properties
@@ -34,9 +34,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\..\\SWP391_Project\\SE1831_G2\\Libery\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\..\\SWP391_Project\\SE1831_G2\\Libery\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jaxb-api-2.1.jar=..\\..\\SWP391_Project\\SE1831_G2\\Libery\\lib\\jaxb-api-2.1.jar
+file.reference.jakarta.activation-1.2.1.jar=..\\..\\..\\SWP391_Project\\SE1831_G2\\Libery\\java mail\\jakarta.activation-1.2.1.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\..\\..\\SWP391_Project\\SE1831_G2\\Libery\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=..\\..\\..\\SWP391_Project\\SE1831_G2\\Libery\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javamail1_4_5.zip=..\\..\\..\\SWP391_Project\\SE1831_G2\\Libery\\java mail\\javamail1_4_5.zip
+file.reference.javax.mail.jar=..\\..\\..\\SWP391_Project\\SE1831_G2\\Libery\\java mail\\javax.mail.jar
+file.reference.jaxb-api-2.1.jar=..\\..\\..\\SWP391_Project\\SE1831_G2\\Libery\\lib\\jaxb-api-2.1.jar
+file.reference.SendMailJava-master.zip=..\\..\\..\\SWP391_Project\\SE1831_G2\\Libery\\java mail\\SendMailJava-master.zip
 file.reference.sqljdbc42.jar=..\\..\\SWP391_Project\\SE1831_G2\\Libery\\lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -47,10 +51,14 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.SendMailJava-master.zip}:\
+    ${file.reference.jakarta.activation-1.2.1.jar}:\
+    ${file.reference.javamail1_4_5.zip}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
